--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Vinay Somawat</title>
+      <title>Emanuel Ștefanache</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="Portfolio webpage of Vinay Somawat" />
+      <meta name="description" content="Portfolio webpage of Emanuel Ștefanache" />
       <meta name="keywords"
-          content="portfolio,website,personal website,github,projects,computer science and engineering" />
-      <meta name="author" content="Vinay Somawat" />
+          content="portfolio,website,personal website,github,projects,video editing and computer science" />
+      <meta name="author" content="Emanuel Ștefanache" />
       <!--------------------Social Media icons------------------------>
       <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -60,8 +60,6 @@
                         </li>
                         <li><a href="#" data-nav-section="projects">Projects</a>
                         </li>
-                        <li><a href="#" data-nav-section="blogs">Blogs</a>
-                        </li>
                         <li><a href="#" data-nav-section="experience">Work
                               Experience</a></li>
                         <li><a href="#"
@@ -82,18 +80,16 @@
                          data-animate-effect="fadeInLeft">
                         <div class="about-desc">
                            <h1>About</h1>
-                           <p>Hi &#128075; <br>I'm Vinay Somawat. I’m currently
-                              working as
-                              a
-                              <b>Software Engineer at Biofourmis India</b> specialized in
-                              <b>JavaScript Applications</b>. I did my undergrad
-                              in CS from <b>NIT Warangal</b>.
+                           <p>Hi &#128075; <br>I'm Emanuel Ștefanache. I am currently working as a
+                              <b>freelancer in video editing on fiverr.com</b> specialized in
+                              <b>travel video and vlog</b>. I use video editing software like 
+                              <b>Adobe Premiere Pro and DaVinci Resolve</b>.
                            </p>
-                           <p>I'm a <b>developer</b>, geek and curious human
-                              besides being an OpenSource enthusiast. I have
-                              experience of delivering solutions for interesting
-                              problems from startup and industry space.</p>
-                           <p class="finalText">I love to cook and travel.</p>
+                           <p>I'm a <b>video editor</b>, with experience in Social, 
+                              Music, Travel, Personal and Business content. 
+                              I offer Video Editing, Video Sound Editing & Post Production Services 
+                              on Freelance, Professionally and Fast.</p>
+                           <p class="finalText">I love to read and travel.</p>
                         </div>
                      </div>
                   </div>
@@ -230,7 +226,7 @@
                         <p>If you would like to get in touch with me, be it for
                            exploring a technology, a business, or to just say
                            hi, feel free to send me an email at
-                           vinaysomawat40@gmail.com
+                           emanuel.stefanache98@gmail.com
                         </p>
                      </div>
                   </div>
